add access readme and modify frontend and backend

--- a/back-end/pyproject.toml
+++ b/back-end/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "app"
 version = "0.0.1"
-description = "Calender API tool"
+description = "Email API tool"
 authors = ["ananya-app"]
 
 [tool.poetry.dependencies]
